--- a/Index.html
+++ b/Index.html
@@ -9,35 +9,39 @@
         href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&family=Quicksand:wght@300&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css.css">
+    <script src="./node_modules/vue/dist/vue.js"></script>
 </head>
 
 <body>
-    <div id="display">
-        <div>123</div>
+    <div id="vueCalc">
+    <div id="display" class="white">
+        <div>{{operator}}{{currentVal}}</div>
+        <div> {{previousVal}}</div>
     </div>
     <div class="wrapper">
-        <div class="rose">AC</div>
-        <div class="rose">2</div>
-        <div class="rose">%</div>
-        <div class="rose">/</div>
-        <div class="white">7</div>
-        <div class="white">8</div>
-        <div class="white">9</div>
-        <div class="rose">X</div>
-        <div class="white">4</div>
-        <div class="white">5</div>
-        <div class="white">6</div>
-        <div class="rose">-</div>
-        <div class="white">1</div>
-        <div class="white">2</div>
-        <div class="white">3</div>
-        <div class="rose">+</div>
-        <div class="white">0</div>
-        <div class="white">00</div>
-        <div class="rose">,</div>
-        <div class="pink">=</div>
+        <div @click="clearAll" class="rose">AC</div>
+        <div @click="clearLastDigit" class="rose">C</div>
+        <div @click="getValue" class="rose">%</div>
+        <div @click="getValue" class="rose">/</div>
+        <div @click="getValue" class="white">7</div>
+        <div @click="getValue" class="white">8</div>
+        <div @click="getValue" class="white">9</div>
+        <div @click="getValue" class="rose">X</div>
+        <div @click="getValue" class="white">4</div>
+        <div @click="getValue" class="white">5</div>
+        <div @click="getValue" class="white">6</div>
+        <div @click="getValue" class="rose">-</div>
+        <div @click="getValue" class="white">1</div>
+        <div @click="getValue" class="white">2</div>
+        <div @click="getValue" class="white">3</div>
+        <div @click="getValue" class="rose">+</div>
+        <div @click="getValue" class="white" id="leftCorner">0</div>
+        <div @click="getValue" class="white">00</div>
+        <div @click="getValue" class="rose">.</div>
+        <div @click="compute" class="pink" id="rightCorner">=</div>
     </div>
-
+</div>
+<script src="./js.js"></script>
 </body>
 
 </html>
